# taskmint-solana

./: Anchor.toml  README.md
programs/taskmint/: Cargo.toml
programs/taskmint/src/: lib.rs
tests/: taskmint.js
